corrected issues with alignment

--- a/src/pages/Tab3.css
+++ b/src/pages/Tab3.css
@@ -14,6 +14,10 @@
     /* opacity: 0.8; */
 }
 
+.ion-card h3{
+    text-align: center;
+}
+
 .option_container{
     display: flex;
     align-items: center;
